<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="404dp"
        android:layout_height="54dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="4dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputNumber" />

    <EditText
        android:id="@+id/InputNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/number_of_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:id="@+id/TextAboutS"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputNumber" />

    <RadioGroup
        android:layout_width="192dp"
        android:layout_height="147dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextAboutS">


        <RadioButton
            android:id="@+id/radioButtonAmazing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Amazing" />

    <RadioButton
            android:id="@+id/radioButtonGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:text="@string/Good"
        />

        <RadioButton
            android:id="@+id/radioButtonOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ok"

            />

    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/SwitchTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group" />

    <TextView
        android:id="@+id/ShowResult"
        android:layout_width="109dp"
        android:layout_height="28dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="44dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>